# self-healing-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  chat.py  docker-compose.yml  main.py  pyproject.toml  run_demo.py  run_pipeline.py
.github/workflows/: ci.yml  docker-build-push.yml
data/: errors_dataset.json  errors_dummy.json
demo/: __init__.py  app.py  trace.py
demo/static/: index.html
deploy/: memory-app.yaml  sample-app.yaml
deploy/ansible/: restart_app.yml
deploy/memory-app/: Dockerfile  app.py
deploy/teams/: manifest.json
docs/: 01_how_to_update_system_prompt.md  02_how_to_deploy_and_trace_model.md  03_how_to_create_vector_database_for_rag.md  ARCHITECTURE.md  DEMO.md  Dokumentasi_SRE_AI_AGENT.md  TEAMS_BOT.md  USE_CASES.md
rag/: __init__.py  embed.py  log_explore.ipynb  query.py  upload.py
scripts/: screenshots.py
src/: __init__.py  tool_trace.py
src/agents/: __init__.py  elasticsearch_agent.py  k8s_monitoring_agent.py  rag_agent.py  router_agent.py  synthesizer_agent.py
src/api/: __init__.py  models.py  routes.py
src/approvals/: __init__.py  agent.py  analysis.py  bot_auth.py  cards.py  executors.py  (+4 more)
tests/: __init__.py  test_agent.py  test_analysis.py  test_approvals.py  test_bot_auth.py  test_elasticsearch_tools.py  test_integration_e2e.py  test_model_api.py  test_model_options.py  test_prompt_guardrails.py  test_rag_similarity_filter.py  test_router_dispatcher.py  test_scenarios.py  test_self_healing.py  test_teams_endpoint.py  test_teams_notifications.py  test_tool_output_limiting.py
(+44 files in other folders)
