[project]
name = "self-healing-pipeline"
version = "0.1.0"
description = "Self-healing Kubernetes pipeline with Microsoft Teams Adaptive Card reporting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0b260127",
    "agent-framework-azure-ai-search>=1.0.0b260127",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.30.0",
    # Pin below 1.0 so `prerelease = "allow"` does not pull the broken httpx 1.0.dev builds.
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.2.1",

    "langfuse>=3.12.1",
    "azure-identity>=1.18.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "pandas>=3.0.1",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "playwright>=1.47.0",
]
# Remediation via a real ansible-playbook (EXECUTOR=ansible).
ansible = [
    "ansible-core>=2.16",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that require a reachable Kubernetes cluster",
]
